--- a/runtimes/codefresh-hosted/in-cluster.yaml
+++ b/runtimes/codefresh-hosted/in-cluster.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     directory:
       include: >-
-        {all-runtimes-all-clusters/*.yaml,all-runtimes-all-clusters/**/*.yaml,runtimes/codefresh-hosted/*.yaml,runtimes/codefresh-hosted/**/*.yaml,control-planes/*.yaml,control-planes/**/*.yaml,codefresh-hosted/codefresh-runtime-applications.yaml,codefresh-hosted/alina-rollouts.yaml,codefresh-hosted/alina-rollout-reporter.yaml}
+        {all-runtimes-all-clusters/*.yaml,all-runtimes-all-clusters/**/*.yaml,runtimes/codefresh-hosted/*.yaml,runtimes/codefresh-hosted/**/*.yaml,control-planes/*.yaml,control-planes/**/*.yaml,codefresh-hosted/codefresh-runtime-applications.yaml}
       recurse: true
     path: resources
     repoURL: >-
