--- a/resources/argo-load/scale-prod-rollouts.yaml
+++ b/resources/argo-load/scale-prod-rollouts.yaml
@@ -15,6 +15,12 @@ spec:
     targetRevision: 2.22.1-1-cap-sw
     helm:
       releaseName: argo-rollouts
+      valuesObject:
+        controller:
+          resources:
+            limits:
+              cpu: "2"
+              memory: 2Gi
   destination:
     namespace: default
     server: https://403E08D8DDCCFB612E8E5EB57670660E.gr7.us-east-1.eks.amazonaws.com
