--- a/resources/argo-load/chart/values.yaml
+++ b/resources/argo-load/chart/values.yaml
@@ -1,4 +1,8 @@
 gitops-runtime:
+  event-reporters:
+    events:
+      argoCDServerServiceName: "5.tcp.eu.ngrok.io"
+      argoCDServerServicePort: "16277"
   argo-events:
     global:
       image:
