--- a/resources/argo-load/chart/values.yaml
+++ b/resources/argo-load/chart/values.yaml
@@ -8,10 +8,21 @@ gitops-runtime:
       image:
         tag: v1.8.0-cap-CR-19893
   argo-cd:
+    redis:
+      replicas: 0
+    repo-server:
+      replicas: 0
+    controller:
+      replicas: 0
+      resources:
+        requests:
+          cpu: "3"
+          memory: "4Gi"
     server:
-      image:
-        name: docker.io/xeonalex/personal-argocd-dev
-        tag: 2.8.1-parrallel-events-5
+      replicas: 0
+      # image:
+        # name: docker.io/xeonalex/personal-argocd-dev
+        # tag: 2.8.1-parrallel-events-5
       service:
         type: LoadBalancer
   global:
