--- a/resources/argo-load/chart/values.yaml
+++ b/resources/argo-load/chart/values.yaml
@@ -10,7 +10,7 @@ gitops-runtime:
   argo-cd:
     redis:
       replicas: 0
-    repo-server:
+    repoServer:
       replicas: 0
     controller:
       replicas: 0
@@ -21,7 +21,7 @@ gitops-runtime:
     server:
       replicas: 0
       # image:
-        # name: docker.io/xeonalex/personal-argocd-dev
+        # repository: docker.io/xeonalex/personal-argocd-dev
         # tag: 2.8.1-parrallel-events-5
       service:
         type: LoadBalancer
