--- a/resources/argo-load/chart/values.yaml
+++ b/resources/argo-load/chart/values.yaml
@@ -20,7 +20,7 @@ gitops-runtime:
       replicas: 1
       image:
         repository: docker.io/xeonalex/personal-argocd-dev
-        tag: 2.8.1-parrallel-events-23
+        tag: on-add-priority-queue
       service:
         type: LoadBalancer
   global:
