--- a/resources/argo-load/chart/values.yaml
+++ b/resources/argo-load/chart/values.yaml
@@ -20,7 +20,7 @@ gitops-runtime:
       replicas: 1
       image:
         repository: docker.io/xeonalex/personal-argocd-dev
-        tag: on-add-priority-queue
+        tag: reporting-v2-test-v8
       service:
         type: LoadBalancer
   global:
