--- a/resources/argo-load/chart/Chart.yaml
+++ b/resources/argo-load/chart/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 appVersion: 1.0.0
 description: Codefresh gitops runtime umbrella chart
 name: codefresh-gitops-runtime
-version: 0.3.2
+version: 0.3.4
 dependencies:
   - name: gitops-runtime
-    repository: https://chartmuseum.codefresh.io/gitops-runtime
-    version: 0.3.2
+    repository: oci://quay.io/codefresh/dev
+    version: 0.3.4-CR-21441-chart-68ea7ee
