--- a/resources/argo-load/chart/Chart.yaml
+++ b/resources/argo-load/chart/Chart.yaml
@@ -5,5 +5,5 @@ name: codefresh-gitops-runtime
 version: 0.3.4
 dependencies:
   - name: gitops-runtime
-    repository: oci://quay.io/codefresh/dev
-    version: 0.3.4-CR-21441-chart-68ea7ee
+    repository: https://chartmuseum.codefresh.io/gitops-runtime
+    version: 0.3.4
