--- a/resources/argo-load/chart/values.yaml
+++ b/resources/argo-load/chart/values.yaml
@@ -34,7 +34,7 @@ gitops-runtime:
       version: v2
       replicas: 10
       image:
-        tag: 2.8.1-multiple-transports
+        tag: 2.8.1-multiple-transports-v1
         repository: docker.io/xeonalex/personal-argocd-dev
       metrics:
         enabled: true
