--- a/runtimes/argo-load/scale-test.yaml
+++ b/runtimes/argo-load/scale-test.yaml
@@ -24,7 +24,7 @@ spec:
   syncPolicy:
     automated:
       allowEmpty: true
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
     syncOptions:
       - allowEmpty=true
