--- a/resources/pasha-personal-v2/chart/Chart.yaml
+++ b/resources/pasha-personal-v2/chart/Chart.yaml
@@ -5,5 +5,5 @@ name: codefresh-gitops-runtime
 version: 0.4.1-release-0.4.1
 dependencies:
   - name: gitops-runtime
-    repository: https://chartmuseum-dev.codefresh.io
+    repository: https://chartmuseum-dev.codefresh.io/gitops-runtime
     version: 0.4.1-release-0.4.1
