--- a/runtimes/pasha-personal-v7/in-cluster.yaml
+++ b/runtimes/pasha-personal-v7/in-cluster.yaml
@@ -5,7 +5,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
   labels:
     codefresh.io/entity: internal-config
-    codefresh.io/internal: "true"
+    codefresh.io/internal: 'true'
   name: in-cluster
 spec:
   destination:
@@ -14,10 +14,12 @@ spec:
   project: default
   source:
     directory:
-      include: '{all-runtimes-all-clusters/*.yaml,all-runtimes-all-clusters/**/*.yaml,runtimes/pasha-personal-v7/*.yaml,runtimes/pasha-personal-v7/**/*.yaml,control-planes/*.yaml,control-planes/**/*.yaml}'
+      include: >-
+        {all-runtimes-all-clusters/*.yaml,all-runtimes-all-clusters/**/*.yaml,runtimes/pasha-personal-v7/*.yaml,runtimes/pasha-personal-v7/**/*.yaml,control-planes/*.yaml,control-planes/**/*.yaml,pasha-personal-v7/cf-gitops-runtime.yaml}
       recurse: true
     path: resources
-    repoURL: https://github.com/oleksandr-codefresh/codefresh-runtime-internal-shared-config.git
+    repoURL: >-
+      https://github.com/oleksandr-codefresh/codefresh-runtime-internal-shared-config.git
     targetRevision: HEAD
   syncPolicy:
     automated:
@@ -25,4 +27,4 @@ spec:
       prune: true
       selfHeal: true
     syncOptions:
-    - allowEmpty=true
+      - allowEmpty=true
