--- a/resources/codefresh/chart/Chart.yaml
+++ b/resources/codefresh/chart/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 appVersion: 1.0.0
 description: Codefresh gitops runtime umbrella chart
 name: codefresh-gitops-runtime
-version: 0.4.0
+version: 0.4.1
 dependencies:
   - name: gitops-runtime
-    repository: https://chartmuseum.codefresh.io/gitops-runtime
-    version: 0.4.0
+    repository: oci://quay.io/codefresh
+    version: 0.4.1
