--- a/runtimes/codefresh/in-cluster.yaml
+++ b/runtimes/codefresh/in-cluster.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     directory:
       include: >-
-        {all-runtimes-all-clusters/*.yaml,all-runtimes-all-clusters/**/*.yaml,runtimes/codefresh/*.yaml,runtimes/codefresh/**/*.yaml,control-planes/*.yaml,control-planes/**/*.yaml,codefresh/cf-gitops-runtime.yaml}
+        {all-runtimes-all-clusters/*.yaml,all-runtimes-all-clusters/**/*.yaml,runtimes/codefresh/*.yaml,runtimes/codefresh/**/*.yaml,control-planes/*.yaml,control-planes/**/*.yaml,codefresh/cf-gitops-runtime.yaml,codefresh/yarik-scale-test.yaml,codefresh/scale-test-rollouts.yaml,codefresh/scale-test-rollout-reporter.yaml,codefresh/scale-prod-rollouts.yaml,codefresh/scale-prod-rollout-reporter.yaml,codefresh/infra.yaml}
       recurse: true
     path: resources
     repoURL: >-
