--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -33,8 +33,8 @@ gitops-runtime:
       enabled: true
       version: v2
       replicas: 10
-      image:
-        tag: v2.9-2023.12.28-a52e719a5
+      # image:
+      #   tag: v2.9-2023.12.28-a52e719a5
       metrics:
         enabled: true
       # env:
