--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -52,8 +52,7 @@ gitops-runtime:
           memory: "200Mi"
     configs:
       cm:
-        timeout:
-          reconciliation: 5s
+        timeout.reconciliation: 5s
       params:
         controller.status.processors: "50"
         controller.operation.processors: "15"
