--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -52,10 +52,10 @@ gitops-runtime:
           memory: "200Mi"
     configs:
       cm:
-        timeout.reconciliation: 5s
+        timeout.reconciliation: 5
       params:
-        controller.status.processors: "50"
-        controller.operation.processors: "15"
+        controller.status.processors: "100"
+        controller.operation.processors: "50"
   global:
     codefresh:
       accountId: 61289cb0432d871402610bad
