--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -52,7 +52,7 @@ gitops-runtime:
           memory: "200Mi"
     configs:
       cm:
-        timeout.reconciliation: 5
+        timeout.reconciliation: 5s
       params:
         controller.status.processors: "100"
         controller.operation.processors: "50"
