--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -58,6 +58,7 @@ gitops-runtime:
       params:
         controller.status.processors: "70"
         controller.operation.processors: "50"
+        controller.self.heal.timeout.seconds: 360
   global:
     codefresh:
       accountId: 61289cb0432d871402610bad
