ignore all differences

--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -59,6 +59,7 @@ gitops-runtime:
         controller.status.processors: "70"
         controller.operation.processors: "50"
         #controller.self.heal.timeout.seconds: 360
+        resource.ignoreResourceUpdatesEnabled: true
         resource.compareoptions: |
           ignoreDifferencesOnResourceUpdates: true
   global:
