debug log level

--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -24,8 +24,8 @@ gitops-runtime:
       image:
         tag: v2.8.1-cap-CR-create-apps-with-err
       env:
-        name: ARGOCD_APPLICATION_CONTROLLER_LOGLEVEL
-        value: "debug"
+        - name: ARGOCD_APPLICATION_CONTROLLER_LOGLEVEL
+          value: "debug"
     server:
       replicas: 3
       service:
