debug log level

--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -23,9 +23,6 @@ gitops-runtime:
           memory: "8Gi"
       image:
         tag: v2.8.1-cap-CR-create-apps-with-err
-      env:
-        - name: ARGOCD_APPLICATION_CONTROLLER_LOGLEVEL
-          value: "debug"
     server:
       replicas: 3
       service:
@@ -63,6 +60,7 @@ gitops-runtime:
       params:
         controller.status.processors: "70"
         controller.operation.processors: "50"
+        controller.log,level: "debug"
         #controller.self.heal.timeout.seconds: 360
 
   global:
