--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -55,6 +55,7 @@ gitops-runtime:
     configs:
       cm:
         timeout.reconciliation: 180s
+        resource.ignoreResourceUpdatesEnabled: true
         resource.compareoptions: |
           ignoreDifferencesOnResourceUpdates: true
       params:
