--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -57,7 +57,10 @@ gitops-runtime:
         timeout.reconciliation: 180s
         resource.ignoreResourceUpdatesEnabled: true
         resource.compareoptions: |
-          ignoreDifferencesOnResourceUpdates: true
+        ignoreDifferencesOnResourceUpdates: true
+        resource.customizations.ignoreResourceUpdates.apps_Deployment: |
+          jsonPointers:
+          - /spec/replicas
       params:
         controller.status.processors: "70"
         controller.operation.processors: "50"
