debug log level

--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -61,6 +61,7 @@ gitops-runtime:
         resource.customizations.ignoreResourceUpdates.apps_Deployment: |
           jsonPointers:
           - /spec/replicas
+          - /status
       params:
         controller.status.processors: "70"
         controller.operation.processors: "50"
