--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -66,7 +66,7 @@ gitops-runtime:
         controller.status.processors: "70"
         controller.operation.processors: "50"
         controller.log.level: "debug"
-        #controller.self.heal.timeout.seconds: 360
+        controller.self.heal.timeout.seconds: 360
 
   global:
     codefresh:
