--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -56,7 +56,7 @@ gitops-runtime:
       cm:
         timeout.reconciliation: 180s
 #        resource.ignoreResourceUpdatesEnabled: true
-        resource.customizations.ignoreDifferences.apps_Deployment: |
+        resource.customizations.ignoreDifferences.argoproj.io_Rollout: |
           jsonPointers:
           - /spec/replicas
           - /status
