debug log level

--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -60,6 +60,10 @@ gitops-runtime:
           jsonPointers:
           - /spec/replicas
           - /status
+        resource.customizations.ignoreResourceUpdates.argoproj.io_Rollout: |
+          jsonPointers:
+          - /spec/replicas
+          - /status
         resource.compareoptions: |
           ignoreDifferencesOnResourceUpdates: true
       params:
