debug log level

--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -55,13 +55,13 @@ gitops-runtime:
     configs:
       cm:
         timeout.reconciliation: 180s
-        resource.ignoreResourceUpdatesEnabled: true
+#        resource.ignoreResourceUpdatesEnabled: true
         resource.customizations.ignoreDifferences.argoproj.io_Rollout: |
           jsonPointers:
-          - /spec/replicas
+          - /spec/progressDeadlineSeconds
           - /status
-        resource.compareoptions: |
-          ignoreDifferencesOnResourceUpdates: true
+#        resource.compareoptions: |
+#          ignoreDifferencesOnResourceUpdates: true
       params:
         controller.status.processors: "70"
         controller.operation.processors: "50"
