--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -8,7 +8,8 @@ gitops-runtime:
   #     image:
   #       tag: v1.8.0-cap-CR-19893
   argo-rollouts:
-    replicas: 0
+    controller:
+      replicas: 0
   argo-cd:
     repoServer:
       replicas: 2
