--- a/resources/codefresh/scale-prod-rollouts.yaml
+++ b/resources/codefresh/scale-prod-rollouts.yaml
@@ -11,8 +11,8 @@ spec:
   project: default
   source:
     chart: argo-rollouts
-    repoURL: https://codefresh-io.github.io/argo-helm
-    targetRevision: 2.22.1-1-cap-sw
+    repoURL: https://quay.io/codefresh/charts/dev
+    targetRevision: 2.32.5-3-analysis-fix
     helm:
       releaseName: argo-rollouts
       valuesObject:
