--- a/resources/codefresh/chart/values.yaml
+++ b/resources/codefresh/chart/values.yaml
@@ -1,4 +1,10 @@
 gitops-runtime:
+  app-proxy:
+  #   replicaCount: 0
+  #   config:
+  #     cors: http://local.codefresh.io
+    image:
+      tag: 1.2623.0
   # event-reporters:
   #   events:
   #     argoCDServerServiceName: "5.tcp.eu.ngrok.io"
