--- a/resources/pasha-monorepo/chart/Chart.yaml
+++ b/resources/pasha-monorepo/chart/Chart.yaml
@@ -5,5 +5,5 @@ name: codefresh-gitops-runtime
 version: 0.12.0
 dependencies:
   - name: gitops-runtime
-    repository: quay.io/codefresh/dev
+    repository: oci://quay.io/codefresh/dev
     version: 0.0.0-feat-monorepo-controller-v1-130a129
