--- a/resources/pasha-monorepo/chart/values.yaml
+++ b/resources/pasha-monorepo/chart/values.yaml
@@ -6,5 +6,11 @@ gitops-runtime:
         secretKeyRef:
           name: codefresh-user-token
           key: token
+    argo-cd: 
+       server:
+        image:
+          imagePullPolicy: Always
+        service:
+          type: LoadBalancer   
     runtime:
       name: pasha-monorepo
