--- a/resources/pasha-monorepo/chart/values.yaml
+++ b/resources/pasha-monorepo/chart/values.yaml
@@ -14,3 +14,5 @@ gitops-runtime:
         imagePullPolicy: Always
       service:
         type: LoadBalancer   
+    acrController:
+       enabled: true
