--- a/resources/pasha-monorepo/chart/values.yaml
+++ b/resources/pasha-monorepo/chart/values.yaml
@@ -18,6 +18,6 @@ gitops-runtime:
        enabled: true
        image: 
          tag: v2.12-2024.9.30-a87492b22
-       # env:
-       # - name: "ARGOCD_SERVER"
-       #   value: "argo-cd-server:80"
+       env:
+       - name: "ARGOCD_SERVER"
+         value: "argo-cd-server:80"
